styles.css
body {
  font-family: Arial, sans-serif;
  text-align: center;
  margin:0px;
}


.navbar ul{
  list-style: none;
  background-color: hsla(54,70%,90%,1);
  padding: 10px;
  margin: 0px;
  overflow: hidden;
  justify-content: center;
  gap:45px;
  display: flex;
} 




.navbar ul li:first-child{
 margin-right: auto
}
.navbar li{
  align-items: center;
  display: flex;
}


.navbar a img{
  height: 70px;
  width: 200px;
  object-fit: contain;

}
.navbar a{
  color:rgb(3, 1, 1);
  text-decoration:none;
  padding:5px 8px;
  display: inline-block;
  text-align: center;
  gap:10px;

}

.navbar a:hover{
  background-color: #fd7e502b; 
  border-radius: 15px;
  
}

.navbar a:active{
  background-color: #fd7e503c;
}


.container{
  display: flex;
  justify-content: center;
}

.card{
  background: rgb(255, 255, 255);
  margin:20px;
  width: 250px;
  border:1px;
  justify-content:center;
  text-align:center;
  border-radius: 15px;
  border-style:solid;
  
}

.card-image{
  background-color: rgb(251, 251, 251);
  height: 90px;
  margin-bottom:15px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding-top: 50%;
  border-radius: 15px 15px 0 0;
}

.food-1{
  background-image: url("images/Maki\ Sushi.jpg");
}

.food-2{
  background-image: url("images/Dumplings.jpg");
}

.food-3{
  background-image: url("images/nigiri.jpg");
}

.food-4{
  background-image:url("images/Authentic\ Japanese\ Ramen\ with\ Rich\ Broth.jpg") ;
}


.container-order {
  display: flex;
  justify-content: center; /* horizontal */
  align-items: center;     /* vertical */
  height: 90vh;           /* full screen height */
}

.square {
  border-radius: 15px;
  width: 400px;
  height: 400px;
  background-color: rgb(222, 222, 232);
}

body {
  font-family: Arial, sans-serif;
  text-align: center;
  margin:0px;
}


.input number{
  color:blue;
}


.texttarea{
  display: flex;
  justify-content: center;
}

